@startuml

title __SERVERREQUESTS's Class Diagram__\n

  namespace  {
    namespace t.polimi.ingsw.network {
      namespace message {
        namespace server {
          namespace serverrequests {
            class it.polimi.ingsw.network.message.server.serverrequests.BuildServerRequest {
                - buildableSquares : List<Position>
                + BuildServerRequest()
                + getBuildableSquares()
            }
          }
        }
      }
    }
  }
  

  namespace  {
    namespace t.polimi.ingsw.network {
      namespace message {
        namespace server {
          namespace serverrequests {
            class it.polimi.ingsw.network.message.server.serverrequests.ChooseGodsServerRequest {
                - godToChoose : int
                + ChooseGodsServerRequest()
                + getHowMany()
            }
          }
        }
      }
    }
  }
  

  namespace  {
    namespace t.polimi.ingsw.network {
      namespace message {
        namespace server {
          namespace serverrequests {
            class it.polimi.ingsw.network.message.server.serverrequests.EndTurnServerRequest {
                + EndTurnServerRequest()
            }
          }
        }
      }
    }
  }
  

  namespace  {
    namespace t.polimi.ingsw.network {
      namespace message {
        namespace server {
          namespace serverrequests {
            class it.polimi.ingsw.network.message.server.serverrequests.MoveWorkerServerRequest {
                - reachablePositions : List<Position>
                + MoveWorkerServerRequest()
                + getReachablePositions()
            }
          }
        }
      }
    }
  }
  

  namespace  {
    namespace t.polimi.ingsw.network {
      namespace message {
        namespace server {
          namespace serverrequests {
            class it.polimi.ingsw.network.message.server.serverrequests.PickGodServerRequest {
                - godsToPick : List<God>
                + PickGodServerRequest()
                + getGods()
            }
          }
        }
      }
    }
  }
  

  namespace  {
    namespace t.polimi.ingsw.network {
      namespace message {
        namespace server {
          namespace serverrequests {
            class it.polimi.ingsw.network.message.server.serverrequests.PlaceWorkerServerRequest {
                - workNum : Integer
                + PlaceWorkerServerRequest()
                + getWorker()
            }
          }
        }
      }
    }
  }
  

  namespace  {
    namespace t.polimi.ingsw.network {
      namespace message {
        namespace server {
          namespace serverrequests {
            class it.polimi.ingsw.network.message.server.serverrequests.SelectWorkerServerRequest {
                + SelectWorkerServerRequest()
            }
          }
        }
      }
    }
  }
  

  namespace  {
    namespace t.polimi.ingsw.network {
      namespace message {
        namespace server {
          namespace serverrequests {
            class it.polimi.ingsw.network.message.server.serverrequests.ServerRequest {
                + ServerRequest()
                + execute()
                + getContent()
            }
          }
        }
      }
    }
  }
  

  namespace  {
    namespace t.polimi.ingsw.network {
      namespace message {
        namespace server {
          namespace serverrequests {
            class it.polimi.ingsw.network.message.server.serverrequests.StartTurnServerRequest {
                + StartTurnServerRequest()
            }
          }
        }
      }
    }
  }
  

  it.polimi.ingsw.network.message.server.serverrequests.BuildServerRequest -up-|> it.polimi.ingsw.network.message.server.serverrequests.ServerRequest
  it.polimi.ingsw.network.message.server.serverrequests.ChooseGodsServerRequest -up-|> it.polimi.ingsw.network.message.server.serverrequests.ServerRequest
  it.polimi.ingsw.network.message.server.serverrequests.EndTurnServerRequest -up-|> it.polimi.ingsw.network.message.server.serverrequests.ServerRequest
  it.polimi.ingsw.network.message.server.serverrequests.MoveWorkerServerRequest -up-|> it.polimi.ingsw.network.message.server.serverrequests.ServerRequest
  it.polimi.ingsw.network.message.server.serverrequests.PickGodServerRequest -up-|> it.polimi.ingsw.network.message.server.serverrequests.ServerRequest
  it.polimi.ingsw.network.message.server.serverrequests.PlaceWorkerServerRequest -up-|> it.polimi.ingsw.network.message.server.serverrequests.ServerRequest
  it.polimi.ingsw.network.message.server.serverrequests.SelectWorkerServerRequest -up-|> it.polimi.ingsw.network.message.server.serverrequests.ServerRequest
  it.polimi.ingsw.network.message.server.serverrequests.ServerRequest -up-|> it.polimi.ingsw.network.message.server.ServerMessage
  it.polimi.ingsw.network.message.server.serverrequests.ServerRequest o-- it.polimi.ingsw.network.message.Enum.ServerRequestContent : content
  it.polimi.ingsw.network.message.server.serverrequests.StartTurnServerRequest -up-|> it.polimi.ingsw.network.message.server.serverrequests.ServerRequest


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
